# evil-janet

./: .gitignore  Cargo.toml  README.md  build.rs  expanded.rs  update-janet.sh
.github/workflows/: build.yml  docs.yml
csrc/: janet.c  janet.h
src/: lib.rs
