[package]
name = "evil-janet"
version = "1.11.3"
authors = ["Eric Shimizu Karbstein <gr41.j4ck@gmail.com>", "Andrew Chambers <ac@acha.ninja>"]
edition = "2018"
description = "Low level bindings to the janet language c api."
repository = "https://github.com/andrewchambers/janet-ll"
license-file = "LICENSE"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-freebsd",
    "x86_64-unknown-netbsd", "x86_64-apple-darwin", "x86_64-sun-solaris",
    "aarch64-unknown-linux-gnu", "i686-unknown-linux-gnu",
    "x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
all-features = false
features = ["link-amalg"]

[features]
default = []
# Link the amalgamation library into the application.
link-amalg = []
# Link to system Janet (not recommended generally)
system = []

[dependencies]

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
