[package]
name = "evil-janet"
version = "1.23.0"
authors = [
  "Eric Shimizu Karbstein <gr41.j4ck@gmail.com>",
  "Andrew Chambers <ac@acha.ninja>",
]
edition = "2018"
description = "Low level bindings to the janet language c api."
repository = "https://github.com/GrayJack/evil-janet"
license-file = "LICENSE"
categories = ["external-ffi-bindings", "no-std"]
keywords = ["janet", "embedding", "ffi"]
exclude = ["/.github", "/.vscode", "/shell.nix", "/update-janet.sh"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-freebsd",
  "x86_64-unknown-netbsd",
  "x86_64-apple-darwin",
  "x86_64-unknown-illumos",
  "aarch64-unknown-linux-gnu",
  "i686-unknown-linux-gnu",
  "x86_64-pc-windows-gnu",
  "x86_64-pc-windows-msvc",
]
all-features = false
features = ["link-amalg"]

[features]
default = []
# Link the amalgamation library into the application.
link-amalg = []
# Link to the libjanet library from system (not recommended generally)
link-system = []
# Use header from system Janet
system = []
# Compile with max debug symbols
debug-symbols = []

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0"
